package com.mobilezbd.entity;

public enum ProductCategory {
    SMARTPHONE,
    TABLET,
    SMART_TV,
    ADAPTER,
    LAPTOP,
    ACCESSORIES,
    IPAD,
    AIRPOD,
    POWER_BANK,
    HEADPHONES
}
