package com.mobilezbd.entity;

public enum ProductOwnerRole {
    ADMIN,
    SELLER
}
