package com.mobilezbd.entity;

public enum UserRole {
    ROLE_ADMIN,
    ROLE_CUSTOMER,
    ROLE_SELLER
}
